--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "flomen-jaclyn-heroku",
+  "name": "testbuild",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -12,8 +12,5 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0"
-  },
-  "devDependencies": {
-    "mysql": "^2.16.0"
   }
 }
